delete-data.html: Update delete data page

--- a/delete-data.html
+++ b/delete-data.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head><title>Delete Data</title></head>
-<body><h1>Delete Data</h1><p>Instructions for deleting your data will appear here.</p></body>
+<head>
+  <meta charset="UTF-8">
+  <title>Delete My Facebook Data</title>
+</head>
+<body>
+  <h1>Delete Facebook Data</h1>
+  <p>If you would like your data to be deleted from our servers, please contact us at <strong>minhoi.public@gmail.com</strong> with your Facebook ID. We will process your request within 24 hours.</p>
+</body>
 </html>
